--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 
 	<!-- THE BIG META -->
-	<title>Adventures With Anxiety!</title>  <!-- TRANSLATE -->
-	<meta name="description" content="A story-game about a human and their anxiety. You play as the anxiety." />  <!-- TRANSLATE: content -->
+	<title>Cuộc phiêu lưu cùng sự lo âu!</title>  <!-- TRANSLATE -->
+	<meta name="description" content="Một trò chơi kể chuyện về con người và nỗi lo lắng của họ. Bạn vào vai nỗi lo lắng." />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Twitter Card data -->
@@ -46,10 +46,10 @@
 		<span id="cta_text1">
 			<div class="mini-icon" pic="click" style="top:3px;"></div>
 			<span id="instructions_if_not_mobile">
-				click or spacebar <!-- TRANSLATE THIS -->
+				nhấp chuột hoặc phím cách <!-- TRANSLATE THIS -->
 			</span>
 			<span id="instructions_if_mobile" style="display:none">
-				tap anywhere <!-- TRANSLATE THIS -->
+				nhấn bất cứ đâu <!-- TRANSLATE THIS -->
 			</span>
 		</span>
 		<span id="cta_text2">
@@ -76,8 +76,8 @@
 	<div id="paused">
 		<div>
 			<!-- TRANSLATE THIS -->
-			paused
-			<div>click anywhere to keep freaking out</div>
+			<strong style="font-size: large;">tạm dừng</strong>
+			<div>nhấp vào bất cứ đâu để tiếp tục hoảng loạn</div>
 		</div>
 	</div>
 
@@ -195,19 +195,19 @@
 <!-- TRANSLATE ALL OF THIS -->
 
 <div class="corner-text" id="topleft">
-Created by
+Tạo bởi
 <a href="https://ncase.me/" target="_blank">Nicky Case</a>
 <br>
-Music by
+Âm nhạc
 <a href="https://loyaltyfreakmusic.com" target="_blank">Monplaisir</a>
 <br>
-Extra code by
+Bổ xung mã bởi
 <a href="https://spacie.me/" target="_blank">Spacie</a>
 <br>
 <a href="https://github.com/ncase/anxiety#full-credits" target="_blank">Full credits</a>
 <br><br>
 
-Fan-Made Translations!
+Bản dịch do người hâm mộ thực hiện!
 <br>
 <a href="https://nathsom.github.io/anxiety/">Français</a>
 <br>
@@ -241,16 +241,16 @@ Fan-Made Translations!
 <br>
 ...
 <br>
-<a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(make your own?)</a>
+<a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(tự làm bản dịch của bạn?)</a>
 </div>
 
 <div class="corner-text" id="bottomleft">
 <img src="sprites/about/cc0.png" height="30" style="opacity:0.7"/>
 <br>
-You're already free to reuse &amp; remix this for any use!
+Bạn có thể  thoải mái sử dụng &amp; và phối lại với bất kì mục đích nào!
 <a href="https://github.com/ncase/anxiety#public-domain" target="_blank">(huh?)</a>
 <br>
-<a href="https://github.com/ncase/anxiety" target="_blank">Get the full source code</a>
+<a href="https://github.com/ncase/anxiety" target="_blank">Lấy mã nguồn trò chơi</a>
 </div>
 
 <div class="corner-text" id="topright">
