update act1 and index

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 
 	<!-- THE BIG META -->
 	<title>Cuộc phiêu lưu cùng sự lo âu!</title>  <!-- TRANSLATE -->
-	<meta name="description" content="Một trò chơi kể chuyện về con người và nỗi lo lắng của họ. Bạn vào vai nỗi lo lắng." />  <!-- TRANSLATE: content -->
+	<meta name="description" content="Một trò chơi  nhẹ nhàng về con người và nỗi lo lắng của họ. Bạn vào vai lo lắng." />  <!-- TRANSLATE: content -->
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
-	<meta name="twitter:description" content="A story-game about a human and their anxiety. You play as the anxiety.">  <!-- TRANSLATE: content -->
+	<meta name="twitter:title" content="Cuộc phiêu lưu cùng sự lo âu!">  <!-- TRANSLATE: content -->
+	<meta name="twitter:description" content="Một trò chơi  nhẹ nhàng về con người và nỗi lo lắng của họ. Bạn vào vai lo lắng.">  <!-- TRANSLATE: content -->
 	<meta name="twitter:image" content="https://ncase.me/anxiety/sharing/thumb.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
+	<meta property="og:title" content="Cuộc phiêu lưu cùng sự lo âu!">  <!-- TRANSLATE: content -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ncase.me/anxiety/">
 	<meta property="og:image" content="https://ncase.me/anxiety/sharing/thumb.png">
-	<meta property="og:description" content="A story-game about a human and their anxiety. You play as the anxiety.">  <!-- TRANSLATE: content -->
-	<meta property="og:site_name" content="Adventures With Anxiety!">  <!-- TRANSLATE: content -->
+	<meta property="og:description" content="Một trò chơi  nhẹ nhàng về con người và nỗi lo lắng của họ. Bạn vào vai lo lắng.">  <!-- TRANSLATE: content -->
+	<meta property="og:site_name" content="Cuộc phiêu lưu cùng sự lo âu!">  <!-- TRANSLATE: content -->
 
 	<!-- Styles -->
 	<link rel="stylesheet" type="text/css" href="styles/game.css">
@@ -167,12 +167,12 @@
 		</div>
 		<div style="float: right; width: 135px; height: 63px;">
 			<!-- TRANSLATE THIS -->
-			And advance
-			<div id="text_automatic_toggle">on click</div>
+			Chữ chạy
+			<div id="text_automatic_toggle">nhấp chuột</div>
 		</div>
 		<div style="clear:both"></div>
 		<span id="volume_options">
-			<div>Volume:</div> <!-- TRANSLATE -->
+			<div>Âm lượng:</div> <!-- TRANSLATE -->
 			<input id="volume_slider" type="range" min=0 max=1 value=1 step="0.01"/>
 		</span>
 		<div id="options_ok">
@@ -239,6 +239,8 @@ Bản dịch do người hâm mộ thực hiện!
 <br>
 <a href="https://kyleheren.github.io/anxiety/">한국어</a>
 <br>
+<a href="https://ycn-afs.github.io/anxiety_vietnamse/">Tiếng Việt</a>
+<br>
 ...
 <br>
 <a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(tự làm bản dịch của bạn?)</a>
@@ -254,12 +256,12 @@ Bạn có thể  thoải mái sử dụng &amp; và phối lại với bất kì
 </div>
 
 <div class="corner-text" id="topright">
-Share on an anxiety-app:
+Chia sẻ sự lo âu của bạn:
 <span id="sharing_title">
-	Adventures With Anxiety!
+	Cuộc phiêu lưu cùng sự lo âu!
 </span>
 <span id="sharing_desc">
-	I just played this story-game about a human and their anxiety! You play *as* the anxiety. 😱
+	Mình vừa chơi một trò chơi kể chuyện về một người và nỗi lo âu của họ! Bạn sẽ *vào vai* nỗi lo âu đó. 😱
 </span>
 <div id="share">
 	<a id="share_link_fb" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fncase.me%2Fanxiety%2F" target="_blank" class="no_deco">
@@ -275,16 +277,16 @@ Share on an anxiety-app:
 	</a>
 </div>
 <br>
-For your sharing pleasure:<br>
+Để bạn có thể chia sẻ niềm vui:<br>
 <a href="sharing" target="_blank">Videos &amp; Thumbnails</a>
 </div>
 
 <div class="corner-text" id="bottomright">
-<a href="https://ncase.me/mental-health/" target="_blank">Mental Health Tips &amp; Resources</a>
+<a href="https://ncase.me/mental-health/" target="_blank">Mẹo về sức khỏe tâm thần &amp; Tài nguyên</a>
 <span class="hide-if-cuss-free">
 	<br><br>
-	<a href="?c=1">Cuss-Free Mode</a><br>
-	(for educators who want to avoid an awkward PTA meeting)
+	<a href="?c=1">Chế độ không chửi thề</a><br>
+	(dành cho mục đích giáo dục và tránh khó xử khi họp phụ huynh)
 </span>
 </div>
 
