--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 
 		<!-- TRANSLATE THIS -->
 		<p style="margin-top: 0.6em;">
-			<i style="color:#ff4040">Adventures With Anxiety</i> is about, well, anxiety.
+			<i style="color:#ff4040">Adventures With Anxiety</i> nói về sự lo lắng và lỗi sợ.
 		</p>
 		<p>
-			But I've made this <i>for</i> folks with anxiety disorder, like myself.
-			I hope it can help you see – with humor – how anxiety works.
-			And, just maybe, reduce the fear of fear itself.
+			Tôi làm trò chơi này <i>cho</i> những bạn cũng mắc chứng Rối loạn lo âu (như tôi).
+			Tôi muốn bạn hiểu cách hoạt động của nỗi lo, với góc nhìn vui vẻ hài hước.
+			Biết đâu, bạn sẽ bớt sợ hãi khi phải đối mặt với nỗi lo của mình.
 		</p>
 		<p>
-			There's also badly-drawn stick figures and a hyperactive wolf.
-			Enjoy!
+			Trong truyện hình vẽ người que ngộ nghĩnh và một con sói luôn nóng vội.
+			 ❤️Dịch bởi FoxCode với tình yêu❤️
 		</p>
 		<p style="color:#999; font-size: 16px; line-height: 1.3em;">
-			other notes: alcohol abuse, sexuality<span class="hide-if-cuss-free">, a @✩$!load of swearing</span>
+			mách nhỏ: rượu, tình dục<span class="hide-if-cuss-free">, trở thành @✩$! trong Chế độ giáo dục.</span>
 		</p>
 		<p>
-			<a target="_blank" href="https://ncase.me/mental-health/">mental health tips &amp; resources</a>
+			<a target="_blank" href="https://ncase.me/mental-health/">mẹo sức khỏe tâm thần &amp; tài nguyên</a>
 			&#x1f517;
 		</p>
 		<div id="cn_ok" onclick="publish('hide_cn');" style="float:none">
@@ -285,7 +285,7 @@ Chia sẻ sự lo âu của bạn:
 <a href="https://ncase.me/mental-health/" target="_blank">Mẹo về sức khỏe tâm thần &amp; Tài nguyên</a>
 <span class="hide-if-cuss-free">
 	<br><br>
-	<a href="?c=1">Chế độ không chửi thề</a><br>
+	<a href="?c=1">Chế độ giáo dục</a><br>
 	(dành cho mục đích giáo dục và tránh khó xử khi họp phụ huynh)
 </span>
 </div>
