--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
 			<!-- TRANSLATE THIS -->
 			<div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
-				mental health
-				<a href="https://ncase.me/mental-health/" target="_blank">resources</a>
+				sức khỏe tâm thần
+				<a href="https://ncase.me/mental-health/" target="_blank">tài nguyên</a>
 			</div>
 
 			<div style="margin-top: 26px; color: #999;">
@@ -137,16 +137,16 @@
 
 				<!-- TRANSLATE ALL THIS -->
 				<div>
-					play more of
-					<a href="https://ncase.me" target="_blank">my shtuff</a>
+					chơi thêm
+					<a href="https://ncase.me" target="_blank">những thứ vô tri của tôi</a>
 				</div>
 				<div style="margin-top: 32px;">
-					throw coins<br>at me
-					<a href="https://www.patreon.com/ncase" target="_blank">on Patreon</a>
+					ném tiền<br>vào mặt tôi
+					<a href="https://www.patreon.com/ncase" target="_blank">trên Patreon</a>
 				</div>
 				<div style="margin-top: 28px;">
-					please your ear-holes with Monplaisir's
-					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">original soundtrack</a>
+					để Monplaisir "đấm thẳng" vào lỗ tai bạn
+					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">soundtrack nguyên bản</a>
 				</div>
 
 			</div>
