update logo intro png

--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
 				<!-- TRANSLATE ALL THIS -->
 				<div>
 					chơi thêm
-					<a href="https://ncase.me" target="_blank">những thứ vô tri của tôi</a>
+					<a href="https://ncase.me" target="_blank">mấy thứ vô tri</a>
 				</div>
 				<div style="margin-top: 32px;">
 					ném tiền<br>vào mặt tôi
 					<a href="https://www.patreon.com/ncase" target="_blank">trên Patreon</a>
 				</div>
 				<div style="margin-top: 28px;">
-					để Monplaisir "đấm thẳng" vào lỗ tai bạn
-					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">soundtrack nguyên bản</a>
+					để Monplaisir "đấm" vào lỗ tai bạn
+					<a href="https://chezmonplaisir.bandcamp.com/album/anxiety" target="_blank">soundtrack</a>
 				</div>
 
 			</div>
