update end image

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 			<!-- TRANSLATE THIS -->
 			<div style="font-size: 40px; margin-top: 42px; line-height: 30px;">
-				sức khỏe tâm thần
+				s.khỏe tâm thần
 				<a href="https://ncase.me/mental-health/" target="_blank">tài nguyên</a>
 			</div>
 
