fix some things

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Bản dịch do người hâm mộ thực hiện!
 <br>
 <a href="https://kyleheren.github.io/anxiety/">한국어</a>
 <br>
-<a href="https://ycn-afs.github.io/anxiety_vietnamse/">Tiếng Việt</a>
+<a href="https://ycn-afs.github.io/anxiety-vietnamese/">Tiếng Việt</a>
 <br>
 ...
 <br>
